--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "night-wa-bot",
+  "name": "Nipuna pramod",
   "version": "1.0.0",
-  "description": "A WhatsApp bot using Baileys - Open source Project",
+  "description": "Made by Nipuna Pramod",
   "main": "index.js",
   "type": "module",
   "scripts": {
